feat(openthread): improve Thread network discovery
